avoid menu jumping because of the absence of the scrollbar
it was annoying

--- a/src/main/resources/webApp/css/style.css
+++ b/src/main/resources/webApp/css/style.css
@@ -1,4 +1,8 @@
 
+body {
+    overflow-y: scroll;
+}
+
 h4 {
     margin-top: 1rem;
 }
